--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "(58152, 7)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,8 +797,8 @@
     "# Split the data using train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, \n",
     "                                                    y, \n",
-    "                                                    random_state=rs, \n",
-    "                                                    stratify=y)\n",
+    "                                                    random_state=rs \n",
+    "                                                    )\n",
     "X_train.shape"
    ]
   },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,16 +873,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9442676901753825"
+       "0.9520479254722232"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -907,11 +907,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[18679,    80],\n",
-       "       [   67,   558]], dtype=int64)"
+       "array([[18663,   102],\n",
+       "       [   56,   563]], dtype=int64)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,18 +922,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "True Positives (TP): 558 \n",
-    "True Negatives (TN): 18679\n",
-    "False Positives (FP): 80\n",
-    "False Negatives (FN): 67"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -943,11 +933,11 @@
       "Classification Report for Logistic Regression Model with Training Data:\n",
       "                precision    recall  f1-score   support\n",
       "\n",
-      "  Healthy Loan       1.00      1.00      1.00     18759\n",
-      "High-risk Loan       0.87      0.89      0.88       625\n",
+      "  Healthy Loan       1.00      0.99      1.00     18765\n",
+      "High-risk Loan       0.85      0.91      0.88       619\n",
       "\n",
       "      accuracy                           0.99     19384\n",
-      "     macro avg       0.94      0.94      0.94     19384\n",
+      "     macro avg       0.92      0.95      0.94     19384\n",
       "  weighted avg       0.99      0.99      0.99     19384\n",
       "\n"
      ]
@@ -971,7 +961,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:**T"
+    "**Answer:** The metrics provided about the accuracy score (95%), confusing matrix (19226 True vs 158 False) and classification report (all values between 85% and 100%), prove that the Logistic Regression Model with the Original Data exhibits strong predictive performance for both classes, with slightly  higher accuracy to predict in Healthy Loan cases than High-risk Loan cases."
    ]
   },
   {
@@ -997,20 +987,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112542"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Instantiate the random oversampler model\n",
     "ros = RandomOverSampler(random_state=rs)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)"
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "len(X_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1018,8 +1020,8 @@
      "output_type": "stream",
      "text": [
       "Distinct values:\n",
-      "0    56277\n",
-      "1    56277\n",
+      "0    56271\n",
+      "1    56271\n",
       "Name: loan_status, dtype: int64\n"
      ]
     }
@@ -1038,12 +1040,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model and Fit the model using the resampled training data\n",
     "model_resampled= logic_reg_model(X_resampled, y_resampled)\n",
+    "\n",
     "# Make a prediction using the testing data\n",
     "y_pred_resampled = model_resampled.predict(X_test)"
    ]
@@ -1063,16 +1066,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9959744975744975"
+       "0.9936781215845847"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1098,11 +1101,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[18668,    91],\n",
-       "       [    2,   623]], dtype=int64)"
+       "array([[18649,   116],\n",
+       "       [    4,   615]], dtype=int64)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,18 +1116,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "True Positives (TP): 623\n",
-    "True Negatives (TN): 18668\n",
-    "False Positives (FP): 91\n",
-    "False Negatives (FN): 2"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1134,12 +1127,12 @@
       "Classification Report for Logistic Regression Model with Resampled Data:\n",
       "                precision    recall  f1-score   support\n",
       "\n",
-      "  Healthy Loan       1.00      1.00      1.00     18759\n",
-      "High-risk Loan       0.87      1.00      0.93       625\n",
+      "  Healthy Loan       1.00      0.99      1.00     18765\n",
+      "High-risk Loan       0.84      0.99      0.91       619\n",
       "\n",
-      "      accuracy                           1.00     19384\n",
-      "     macro avg       0.94      1.00      0.96     19384\n",
-      "  weighted avg       1.00      1.00      1.00     19384\n",
+      "      accuracy                           0.99     19384\n",
+      "     macro avg       0.92      0.99      0.95     19384\n",
+      "  weighted avg       0.99      0.99      0.99     19384\n",
       "\n"
      ]
     }
@@ -1162,7 +1155,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The Logistic Regression Model with Resampled Training Data demonstrates exceptional predictive performance for both Healthy Loan cases and High-risk Loan cases. It achieves higher accuracy, a more balanced confusion matrix, and improved classification report metrics compared to the model trained on the original data."
    ]
   }
  ],
