--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -478,22 +478,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the labels\n",
-    "y = df_lending[\"loan_status\"]\n",
-    "\n",
+    "y = df_lending[\"loan_status\"]                                                                                                               \n",
     "# Separate the X variable, the features\n",
     "X = df_lending.drop(columns=\"loan_status\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -787,17 +786,17 @@
        "(58152, 7)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import the train_test_learn module\n",
     "# Split the data using train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, \n",
     "                                                    y, \n",
-    "                                                    random_state=rs \n",
+    "                                                    random_state=rs,\n",
+    "                                                    stratify=y \n",
     "                                                    )\n",
     "X_train.shape"
    ]
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,16 +872,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9520479254722232"
+       "0.9442676901753825"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -907,11 +906,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[18663,   102],\n",
-       "       [   56,   563]], dtype=int64)"
+       "array([[18679,    80],\n",
+       "       [   67,   558]], dtype=int64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -933,11 +932,11 @@
       "Classification Report for Logistic Regression Model with Training Data:\n",
       "                precision    recall  f1-score   support\n",
       "\n",
-      "  Healthy Loan       1.00      0.99      1.00     18765\n",
-      "High-risk Loan       0.85      0.91      0.88       619\n",
+      "  Healthy Loan       1.00      1.00      1.00     18759\n",
+      "High-risk Loan       0.87      0.89      0.88       625\n",
       "\n",
       "      accuracy                           0.99     19384\n",
-      "     macro avg       0.92      0.95      0.94     19384\n",
+      "     macro avg       0.94      0.94      0.94     19384\n",
       "  weighted avg       0.99      0.99      0.99     19384\n",
       "\n"
      ]
@@ -961,7 +960,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The metrics provided about the accuracy score (95%), confusing matrix (19226 True vs 158 False) and classification report (all values between 85% and 100%), prove that the Logistic Regression Model with the Original Data exhibits strong predictive performance for both classes, with slightly  higher accuracy to predict in Healthy Loan cases than High-risk Loan cases."
+    "**Answer:** The logistic regression model with training data, predicts both the 0 (Healthy Loan) and 1 (High-risk Loan) labels effectively. It achieves a high precision of 1.00 for the Healthy Loan class, indicating its perfect performance to make accurate positive predictions, and a precision of 0.87 for the High-risk Loan class, indicating its effectiveness to accurately predict high-risk loans. This model achieves strong predictive performance in maintaining accuracy between the Healthy Loan and High-risk Loan classes, and strong performance in identifying both cases (more for negative cases )"
    ]
   },
   {
@@ -987,16 +986,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "112542"
+       "112554"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1020,8 +1019,8 @@
      "output_type": "stream",
      "text": [
       "Distinct values:\n",
-      "0    56271\n",
-      "1    56271\n",
+      "0    56277\n",
+      "1    56277\n",
       "Name: loan_status, dtype: int64\n"
      ]
     }
@@ -1040,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,16 +1065,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9936781215845847"
+       "0.9959744975744975"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1101,11 +1100,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[18649,   116],\n",
-       "       [    4,   615]], dtype=int64)"
+       "array([[18668,    91],\n",
+       "       [    2,   623]], dtype=int64)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1127,12 +1126,12 @@
       "Classification Report for Logistic Regression Model with Resampled Data:\n",
       "                precision    recall  f1-score   support\n",
       "\n",
-      "  Healthy Loan       1.00      0.99      1.00     18765\n",
-      "High-risk Loan       0.84      0.99      0.91       619\n",
+      "  Healthy Loan       1.00      1.00      1.00     18759\n",
+      "High-risk Loan       0.87      1.00      0.93       625\n",
       "\n",
-      "      accuracy                           0.99     19384\n",
-      "     macro avg       0.92      0.99      0.95     19384\n",
-      "  weighted avg       0.99      0.99      0.99     19384\n",
+      "      accuracy                           1.00     19384\n",
+      "     macro avg       0.94      1.00      0.96     19384\n",
+      "  weighted avg       1.00      1.00      1.00     19384\n",
       "\n"
      ]
     }
@@ -1155,7 +1154,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The Logistic Regression Model with Resampled Training Data demonstrates exceptional predictive performance for both Healthy Loan cases and High-risk Loan cases. It achieves higher accuracy, a more balanced confusion matrix, and improved classification report metrics compared to the model trained on the original data."
+    "**Answer:** The logistic regression model with oversampled data, predicts both the 0 (Healthy Loan) and 1 (High-risk Loan) labels effectively. It achieves a high precision of 1.00 for the Healthy Loan class, indicating its perfect performance to make accurate positive predictions, and a precision of 0.87 for the High-risk Loan class, indicating its effectiveness to accurately predict high-risk loans. This model achieves higher accuracy, a more balanced confusion matrix, and improved classification report metrics compared to the model trained on the original data."
    ]
   }
  ],
